# EPIK

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.txt  CMakeLists.txt  LICENSE  README.md  build.sh  epik.py  kmer_filter.ipynb  rappas2.py
.github/workflows/: build.yml
cmake/modules/: FindQuadMath.cmake
epik/: CMakeLists.txt  rapidjson.cmake
epik/include/epik/: intrinsic.h  jplace.h  place.h
epik/src/epik/: jplace.cpp  main.cpp  place.cpp
place/: CMakeLists.txt
place/src/: main.cpp
place/src/place/: jplace.cpp  place.cpp  place.h
rappas/: CMakeLists.txt
rappas/src/: main.cpp
rappas/src/rappas/: jplace.cpp  jplace.h  place.cpp  place.h
scripts/: config.json  jplace_diff.py  ppdiff.py
src/: CMakeLists.txt  main.cpp
src/ar/: bindep_wrapper.cpp  bindep_wrapper.h  evo_model.cpp  evo_model.h
src/cli/: command_line.cpp  command_line.h  exceptions.h
src/core/: alignment.cpp  alignment.h  ar.cpp  ar.h  db_builder.cpp  db_builder.h  fasta.cpp  fasta.h  kmer.h  newick.cpp  newick.h  phylo_kmer.cpp  phylo_kmer.h  phylo_kmer_db.cpp  phylo_kmer_db.h  phylo_kmer_explorer.cpp  phylo_kmer_explorer.h  phylo_tree.cpp  phylo_tree.h  phyml.cpp  phyml.h  proba_matrix.cpp  proba_matrix.h  return.h  seq.h  seq_traits.cpp  seq_traits.h
src/core/pp_matrix/: branch_entry.cpp  branch_entry.h  branch_entry_view.cpp  branch_entry_view.h  phyml.cpp  phyml.h  proba_matrix.cpp  proba_matrix.h  row.h
src/core/tree/: phylo_tree.cpp  phylo_tree.h
src/pp_matrix/: branch_entry_view.cpp  branch_entry_view.h  phyml.cpp  proba_matrix.h
src/tree/: phylo_tree.cpp
src/utils/: algorithm.h  buffered_reader.cpp  buffered_reader.h  file_io.cpp  file_io.h  meta.h
tests/: test-placement.sh
tests/data/D652/: DB_k7_o2.0.ipk  query_10k.fasta  reference.jplace
